# INF222

./: .gitignore  README.md  feature.hs
code/: code.cabal  lecture1.hs  lecture3.hs
code/assignments/: BIPL2ASTassign.hs  BIPL2analysis.hs  BIPL2runtime.hs  BIPL2static.hs  BTL2.hs  Naturals.hs  assignment3.hs
code/assignments/java/: README.md
code/assignments/java/src/: Natural.java  NaturalToInt.java  SomeClass.java  SomeType.java
code/assignments/java/src/BTL/: And.java  BTL1.java  Expr.java  F.java  I.java  Minus.java  Mult.java  Not.java  Or.java  Plus.java  T.java  ValueDomain.java  Z.java
code/assignments/java/src/Natural/: Natural.java  NaturalToInt.java  Succ.java  Zero.java
code/assignments/java/src/SomeClass/: SomeClass.java  SomeType.java
code/assignments/java/test/BTL/: BTL1Test.java
code/exercises/: Pam1AST.hs  Pam2RegisterAST.hs  Pam2RegisterStore.hs  Pam3RegisterVariableAST.hs
code/lectures/: lec6.hs
code/src/assignments/: BTL3.hs  BTL3_1.hs  PIPLcopyinterpreter3.hs  assignment1.hs  assignment2.hs  assignment3.hs
code/src/assignments/java/: README.md
code/src/assignments/java/src/BTL/: BTL1.java  (+7 more)
code/src/exercises/: Pam2RegisterAST.hs  Pam3RegisterVariableAST.hs  Pam4Eval.hs  Pam4State.hs  Pam4VariableAST.hs  Pam4VariableInterpreter.hs  Pam5IdivremAST.hs  Pam6CalculatorTemplate.hs  Pam6Intrinsics.hs  Pam6Signature.hs  Pam6SignatureAST.hs  Pam6SignatureInterpreter.hs  testEither.hs
code/src/lectures/: BTL1.hs  BTL2typed.hs  lecture1.hs
code/src/lectures/inf222-2023-lec0401-code-haskell/: BTL1.hs  BTL2.hs  BTL3.hs  Naturals.hs
(+14 files in other folders)
