cabal-version:      3.0
name:               code
version:            0.1.0.0
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Kristian Sørdal
maintainer:         krisor99@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall -Wno-missing-signatures

library
    import:           warnings
    exposed-modules:  MyLib
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.3.0,
                      haskeline,
                      array,
                      containers
    hs-source-dirs:   src
    default-language: Haskell2010
